--- a/com.primeton.iaas.selfservice.portal/pom.xml
+++ b/com.primeton.iaas.selfservice.portal/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>com.primeton.iaas.selfservice.portal</artifactId>
 	<version>7.0.0.0</version>
 	<packaging>war</packaging>
-	
+
 	<name>com.primeton.iaas.selfservice.portal</name>
 
 	<properties>
@@ -191,7 +191,7 @@
 			<artifactId>db2jcc</artifactId>
 			<version>0.x</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.primeton.3rd.objectweb</groupId>
 			<artifactId>asm</artifactId>
@@ -263,31 +263,37 @@
 			<artifactId>stax-api</artifactId>
 			<version>1.0.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>io.fabric8</groupId>
 			<artifactId>kubernetes-api</artifactId>
 			<version>2.2.101</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jdbc</artifactId> 
+			</dependency> <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
+			</dependency> -->
+
+
+
+		<dependency>
+			<groupId>org.codehaus.jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.3.8</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency> -->
-
-
-
+			<groupId>com.primeton.3rd.apache</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- <finalName>com.primeton.iaas.selfservice.portal</finalName> -->
