endpoint之前完成了

--- a/com.primeton.iaas.selfservice.portal/src/main/webapp/WEB-INF/web.xml
+++ b/com.primeton.iaas.selfservice.portal/src/main/webapp/WEB-INF/web.xml
@@ -60,6 +60,7 @@
 	  		 ,com.primeton.iaas.selfservice.portal.caas.replicationControllers.controller.ReplicationController
 	  		 ,com.primeton.iaas.selfservice.portal.caas.services.controller.ServiceController
 	  		 ,com.primeton.iaas.selfservice.portal.caas.endpoints.controller.EndPointController
+	  		 ,com.primeton.iaas.selfservice.portal.caas.events.controller.EventController
 	  </param-value>
 
 	</context-param>
