--- a/com.primeton.iaas.selfservice.portal/pom.xml
+++ b/com.primeton.iaas.selfservice.portal/pom.xml
@@ -294,6 +294,11 @@
 			<version>1.2.14</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- <finalName>com.primeton.iaas.selfservice.portal</finalName> -->
